--- a/build.properties
+++ b/build.properties
@@ -27,9 +27,9 @@ electron.userdata.replace = app.setPath('userData', path.join(path.dirname(proce
 atf.id = Riot
 atf.win32.filename = RiotSetup-win32
 atf.win32.ext = .exe
-atf.win32.url = https://riot.im/download/desktop/install/win32/ia32/Riot%20Setup%20${app.version}.exe
+atf.win32.url = https://packages.riot.im/desktop/install/win32/ia32/Riot%20Setup%20${app.version}.exe
 atf.win32.assertextract = RELEASES
 atf.win64.filename = RiotSetup-win64
 atf.win64.ext = .exe
-atf.win64.url = https://riot.im/download/desktop/install/win32/x64/Riot%20Setup%20${app.version}.exe
+atf.win64.url = https://packages.riot.im/desktop/install/win32/x64/Riot%20Setup%20${app.version}.exe
 atf.win64.assertextract = RELEASES
