--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,12 @@
 # Portapps
-#core.dir = vendor/github.com/portapps/portapps
 core.dir = ../portapps
 
 # App
 app = riot
 app.name = Riot
 app.type = electron
-app.version = 1.1.2
+app.version = 1.2.0
+app.homepage = https://about.riot.im/
 
 # Portable app
 papp.id = ${app}-portable
