--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,8 @@ core.dir = ../portapps
 app = riot
 app.name = Riot
 app.type = electron
-app.version = 1.3.2
+app.version = 1.3.4
+app.release = 19
 app.homepage = https://about.riot.im/
 
 # Portable app
