Riot rebranded Element Element 1.7.3

--- a/build.properties
+++ b/build.properties
@@ -2,12 +2,12 @@
 core.dir = ../portapps
 
 # App
-app = riot
-app.name = Riot
+app = element
+app.name = Element
 app.type = electron
-app.version = 1.6.8
-app.release = 33
-app.homepage = https://about.riot.im/
+app.version = 1.7.3
+app.release = 34
+app.homepage = https://element.io/
 
 # Portable app
 papp.id = ${app}-portable
@@ -18,13 +18,13 @@ papp.url = https://github.com/portapps/${papp.id}
 papp.folder = app
 
 # Electron
-electron.executionstub = Riot_ExecutionStub.exe
+electron.executionstub = Element_ExecutionStub.exe
 electron.libfolder = lib/net45
 electron.enableautoupdate = false
 
 # Official artifacts
-atf.id = Riot
-atf.win64.filename = RiotSetup-win64
+atf.id = Element
+atf.win64.filename = ElementSetup-win64
 atf.win64.ext = .exe
-atf.win64.url = https://packages.riot.im/desktop/install/win32/x64/Riot%20Setup%20${app.version}.exe
+atf.win64.url = https://packages.riot.im/desktop/install/win32/x64/Element%20Setup%20${app.version}.exe
 atf.win64.assertextract = RELEASES
